fix: fixed banner taking too much width

--- a/src/styles/team.css
+++ b/src/styles/team.css
@@ -1,7 +1,16 @@
 
+.team-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+
 .team-section {
-    border: black 10px;
     display: grid;
+    width: fit-content;
     grid-template-rows: repeat(2, auto);
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
@@ -12,8 +21,6 @@
 .pokemon-card-container {
     display: flex;
     background-color: blueviolet;
-    width: 80%;
-    height: 100%;
     justify-content: space-evenly;
     align-items: center;
 }
